# nix-polylang-monorepo

./: .gitignore  flake.nix  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.nx/cache/: run.json
.nx/workspace-data/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  source-maps.json
apps/python-grpc-server/: README.md  pyproject.toml  server.py
apps/website1/: package.json  postcss.config.mjs  tsconfig.json
apps/website1/app/: globals.css  layout.tsx  page.tsx
apps/website1/app/server-render/: page.tsx
apps/website1/features/: grpc-client.ts
apps/website1/features/server/: grpc-client.ts
nix/shells/: base.nix  js.nix  proto.nix  python-grpc.nix  python.nix  shells.nix
